# video-recognition-agent-gui

./: .env.example  .gitignore  README.md  backend_api.py  codex_agent_core.py  desktop_app.py  index.html  package-lock.json  package.json  requirements.txt  server.mjs  start_gui.cmd  video_agent_core.py  vite.config.js
.github/workflows/: release.yml
public/: app.js  index.html  styles.css
scripts/: build_sidecar.mjs  build_sidecar.ps1  dashscope_local_video.py
src/: main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
